add navbar background color

--- a/public/index.html
+++ b/public/index.html
@@ -247,12 +247,7 @@
         </form>
          <button id="cancel-1" onclick="showContact800(), sendEmail()" class="btn btn-dark">Cancel</button>
     </div></div></div></div>
-     <script src="/js/main.js" > 
-     if (window.innerWidth<=800){
-        document.querySelector(".flip-card").style.display= "block";
-    }
-    else{
-        document.querySelector(".flip-card").style.display= "none";
-    }</script>
+     <script src="/js/main.js" >
+      </script>
 </body>
 </html>
