--- a/public/index.html
+++ b/public/index.html
@@ -72,7 +72,8 @@
                                 style="color: #fff;"></a>
                         </div>
                     </div>
-                    <div id="Hire"><a href="#"><button id="download-resume">Resume <i
+                    <div id="Hire">
+                        <a href="https://drive.google.com/file/d/12lbjU_013QHzPbVyFPl6AhLFQ4tQqhll/view?usp=drivesdk"><button id="download-resume">Resume <i
                                     class="fa-solid fa-download"></i></button></a>
                         <a href="#" onclick="contact()"><button id="hiremebtn">Hire me</button></a>
                     </div>
